# Empire

./: .gitignore  Makefile  README.md  doxygen.config
code_templates/: class_def.cc  header.h
docs/: 2011-11-04-Note-19-50.xoj
docs/Entwurf Testcases/: Collection Tests.docx  CommandParserTests.txt  PropertyTests.txt
docs/Handbuch/LaTeX/: HB00-Titelblatt  HB00-Titelblatt.tex  HB01-Kurzbeschreibung.tex  HB02-Zielgruppe.tex  HB03-Anwendungsfaelle.tex  HB03b-Anwendungsbeispiel.tex  HB04-Installationsanleitung.tex  HB04-Speicherstruktur.tex  HB05-Anwendungsbeispiel.tex  HB05-Backup.tex  HB06-Deinstallieren.tex  HB07-Glossar.tex  HB09-Glossar.tex  Handbuch.tex  Header.tex
docs/Pflichtenheft/LaTeX/: Header.tex  PH00-Titelblatt.tex  PH01-Zielbestimmungen.tex  PH02-Produkteinsatz.tex  PH03-Produktuebersicht.tex  PH04-Produktleistungen.tex  PH05-Benutzeroberflaeche.tex  PH05-Qualitaetsanforderungen.tex  PH06-Qualitaetsanforderungen.tex  PH06-Testszenarien.tex  PH07-Entwicklungsumgebung.tex  PH07-Testszenarien.tex  PH08-Entwicklungsumgebung.tex  PH08-Ergaenzungen.tex  PH09-Ergaenzungen.tex  PH09-Glossar.tex  PH10-Glossar.tex  Pflichtenheft.tex  _Pflichtenheft.tex  kommando-struktur.eps
docs/Programmentwurf/: uml.zargo
docs/Programmentwurf/j4uml/: README.txt  empire.ucd
docs/Programmentwurf/j4uml/src/: Collection.java  FunctionPointer.java  Property.java  PropertyDate.java  PropertyFloat.java  PropertyFunction.java  PropertyInteger.java  PropertyString.java  alt_commands.ucd
docs/Programmentwurf/j4uml/src/alt_commands/: AddCommand.java  BasicCommand.java  CommandCollection.java  CreateCommand.java  InitCommand.java  LogCommand.java  ModifyCommand.java  RemoveCommand.java  RenderCommand.java  SearchCommand.java  ShowCommand.java
docs/Programmentwurf/j4uml/src/commands/: AddCommand.java  CommandParser.java  CreateCommand.java  InitCommand.java  LogCommand.java  ModifyCommand.java  RemoveCommand.java  ShowCommand.java
docs/Programmentwurf/j4uml/src/dataTypes/: Collection.java  FunctionPointer.java  Property.java  PropertyDate.java  PropertyFloat.java  PropertyFunction.java  PropertyInteger.java  PropertyString.java
docs/Testprotokolle/LaTeX/: Header.tex  TP00-Titelblatt.tex  TP01-Repository.tex  TP02-Erstellen.tex  TP03-Auslesen.tex  TP04-Bearbeiten.tex  TP05-Loeschen.tex  TP06-Rechnungsnummer-Syntax.tex  TP07-Latex-Template.tex  TP08-HTML-Template.tex  Testprotokolle.tex
example/: customer.sh  me.sh  presentation  rechnung.txt
example/Rechnungen/: name  ort  strasse  summe
example/Rechnungen/.emp/: summe
example/Rechnungen/Kunde1/: kName  kOrt  kStrasse
example/Rechnungen/Kunde1/Auftrag1/: rechnung.txt
example/Rechnungen/Kunde1/Auftrag1/posten/0/: pname
example/Rechnungen/Kunde1/Auftrag1/posten/1/: pname
output/: invoice.htm
src/: CMakeLists.txt  Collection.cc  Collection.h  DefineException.h  Empire.cpp  Filesystem.cc  Filesystem.h  FunctionType.cc  FunctionType.h  GenProperty.cc  GenProperty.h  GenPropertyBase.h  GenPropertyNew.cc  ListHelper.cc  ListHelper.h  LuaHelper.cc  LuaHelper.h  Makefile  Property.h  PropertyInteger.cc  PropertyInteger.h  RegexHelper.cc  RegexHelper.h  Repository.cc  Repository.h  SyntaxParser.cc  SyntaxParser.h  Template.cc  Template.h  bla  doxygen.config  inv  inv.coffee  invadmin  invoice.cc  invoice.h  main.cpp  main2.cpp  package.json  properties.cc  (+1 more)
src/collections/: CMakeLists.txt  Collection.cc  Collection.h  Collectionlist.h  PropertyList.cc  PropertyList.h  Propertylist.h
src/modules/: add.coffee  list.coffee  remove.coffee  render.coffee
src/modules/admin/collection/: add.coffee  list.coffee  remove.coffee
src/modules/admin/property/: add.coffee  list.coffee  remove.coffee
src/modules/property/: add.coffee  list.coffee  remove.coffee
src/properties/: CMakeLists.txt  Property.cc  Property.h  PropertyFloat.cc  PropertyFloat.h  PropertyFunction.cc  PropertyFunction.h  PropertyInteger.cc  PropertyInteger.h  PropertyString.cc  PropertyString.h
src/tests/: CMakeLists.txt  CollectionTests.cpp  CommandTests.cpp  FilesystemTests.cpp  GenPropertyTest.cpp  MainTests.cpp  PropertyFloatTests.cpp  PropertyFunctionTests.cpp  PropertyIntegerTests.cpp  PropertyStringTests.cpp  PropertyTests.cpp  RepositoryTests.cpp  SyntaxParserTests.cpp  TemplateTests.cpp
templates/invoices/: invoice.htm  invoice.tex
